--- a/config/model_configs/prognostic_edmfx_dycoms_rf01_box.yml
+++ b/config/model_configs/prognostic_edmfx_dycoms_rf01_box.yml
@@ -1,8 +1,10 @@
-job_id: edmfx_trmm_box
-initial_condition: TRMM_LBA
-rad: TRMM_LBA
-surface_setup: TRMM_LBA
-turbconv: edmfx
+job_id: prognostic_edmfx_dycoms_rf01_box
+initial_condition: DYCOMS_RF01
+subsidence: DYCOMS
+edmf_coriolis: DYCOMS_RF01
+rad: DYCOMS_RF01
+surface_setup: DYCOMS_RF01
+turbconv: prognostic_edmfx
 edmfx_upwinding: first_order
 edmfx_entr_model: "ConstantCoefficient"
 edmfx_detr_model: "BOverW"
@@ -11,20 +13,17 @@ edmfx_sgs_diffusive_flux: true
 edmfx_nh_pressure: true
 prognostic_tke: false
 moist: equil
-apply_limiter: false
-#precip_model: "0M"
 config: box
 hyperdiff: "true"
 kappa_4: 1e12
 x_max: 1e5
 y_max: 1e5
-z_max: 16400
+z_max: 1500
 x_elem: 2
 y_elem: 2
-z_elem: 82
+z_elem: 30
 z_stretch: false
-dt: 1secs
-t_end: 2hours
+dt: 5secs
+t_end: 4hours
 dt_save_to_disk: 10mins
-FLOAT_TYPE: "Float64"
-toml: [toml/edmfx_box.toml]
+toml: [toml/prognostic_edmfx_box.toml]
