--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -412,7 +412,7 @@ steps:
           --out_dir sphere_held_suarez_rhoe_equilmoist_default
         artifact_paths: "sphere_held_suarez_rhoe_equilmoist_default/*"
         agents:
-          slurm_ntasks: 32
+          # slurm_ntasks: 32
           slurm_time: 24:00:00
 
       # - label: ":computer: held suarez (ρe) equilmoist dt_y = 0"
