upgrade to latest ClimaCore and CUDA

--- a/Project.toml
+++ b/Project.toml
@@ -54,9 +54,9 @@ ArgParse = "1"
 ArtifactWrappers = "0.2"
 AtmosphericProfilesLibrary = "0.1"
 CLIMAParameters = "0.7.23"
-CUDA = "4"
+CUDA = "4, 5"
 ClimaComms = "0.5.5"
-ClimaCore = "0.10.53"
+ClimaCore = "0.10.54"
 ClimaTimeSteppers = "0.7.14"
 CloudMicrophysics = "0.14.0"
 Colors = "0.12"
