CompatHelper: bump compat for SurfaceFluxes to 0.8, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -82,7 +82,7 @@ RootSolvers = "0.2, 0.3, 0.4"
 SciMLBase = "1, 2"
 StaticArrays = "1"
 StatsBase = "0.33, 0.34"
-SurfaceFluxes = "0.7.2"
+SurfaceFluxes = "0.7.2, 0.8"
 TerminalLoggers = "0.1"
 Thermodynamics = "0.11"
 YAML = "0.4"
