Output default diagnostics by default

--- a/config/default_configs/default_config.yml
+++ b/config/default_configs/default_config.yml
@@ -257,7 +257,7 @@ log_params:
   value: false
 output_default_diagnostics:
   help: "Output the default diagnostics associated to the selected atmospheric model"
-  value: false
+  value: true
 netcdf_interpolate_z_over_msl:
   help: "Interpolate diagnostics in the NetCDF files in such a way that `z` is the elevation from the sea level (as opposed to the elevation from the surface)"
   value: false
