--- a/config/model_configs/sphere_held_suarez_rhoe_equilmoist_6.yml
+++ b/config/model_configs/sphere_held_suarez_rhoe_equilmoist_6.yml
@@ -9,27 +9,27 @@ diagnostics:
   - reduction_time: average
     short_name: thetaa
     period: 6hours
-    writer: h5
+    writer: nc
   - reduction_time: average
     short_name: thetaa
     period: 30days
-    writer: h5
+    writer: nc
   - reduction_time: average
     short_name: ts
     period: 6hours
-    writer: h5
+    writer: nc
   - reduction_time: average
     short_name: ts
     period: 30days
-    writer: h5
+    writer: nc
   - reduction_time: average
     short_name: ta
     period: 6hours
-    writer: h5
+    writer: nc
   - reduction_time: average
     short_name: ta
     period: 30days
-    writer: h5
+    writer: nc
 
 job_id: sphere_held_suarez_rhoe_equilmoist_6
 output_dir: sphere_held_suarez_rhoe_equilmoist_6
