--- a/config/gpu_configs/target_gpu_hs_rhoe_equilmoist_nz63_0M_55km_rs35km_4process.yml
+++ b/config/gpu_configs/target_gpu_hs_rhoe_equilmoist_nz63_0M_55km_rs35km_4process.yml
@@ -1,4 +1,4 @@
-dt_save_to_disk: "10days"
+dt_save_to_sol: "Inf"
 dt: "100secs"
 t_end: "1days"
 h_elem: 30
@@ -12,5 +12,5 @@ moist: "equil"
 precip_model: "0M"
 rayleigh_sponge: true
 forcing: "held_suarez"
-job_id: "gpu_hs_rhoe_equilmoist_nz63_0M_55km_rs35km"
+job_id: "target_gpu_hs_rhoe_equilmoist_nz63_0M_55km_rs35km_4process"
 toml: [toml/longrun_hs_rhoe_equilmoist_nz63_0M_55km_rs35km.toml]
