--- a/config/longrun_configs/longrun_aquaplanet_amip.yml
+++ b/config/longrun_configs/longrun_aquaplanet_amip.yml
@@ -13,8 +13,8 @@ surface_setup: "DefaultMoninObukhov"
 turbconv: "diagnostic_edmfx" 
 prognostic_tke: true
 edmfx_upwinding: "first_order" 
-edmfx_entr_model: "ConstantTimescale" 
-edmfx_detr_model: "BOverW" 
+edmfx_entr_model: "Generalized" 
+edmfx_detr_model: "Generalized" 
 edmfx_nh_pressure: true 
 edmfx_sgs_mass_flux: true
 edmfx_sgs_diffusive_flux: true
