--- a/config/model_configs/diagnostic_edmfx_aquaplanet_tke.yml
+++ b/config/model_configs/diagnostic_edmfx_aquaplanet_tke.yml
@@ -5,8 +5,8 @@ rad: gray
 turbconv: diagnostic_edmfx 
 prognostic_tke: true
 edmfx_upwinding: first_order 
-edmfx_entr_model: "ConstantTimescale" 
-edmfx_detr_model: "BOverW" 
+edmfx_entr_model: "Generalized" 
+edmfx_detr_model: "Generalized" 
 edmfx_nh_pressure: true 
 edmfx_sgs_mass_flux: true
 edmfx_sgs_diffusive_flux: true
