--- a/config/model_configs/diagnostic_edmfx_rico_box.yml
+++ b/config/model_configs/diagnostic_edmfx_rico_box.yml
@@ -7,8 +7,8 @@ surface_setup: Rico
 turbconv: diagnostic_edmfx
 prognostic_tke: true
 edmfx_upwinding: first_order
-edmfx_entr_model: "ConstantTimescale" 
-edmfx_detr_model: "BOverW" 
+edmfx_entr_model: "Generalized" 
+edmfx_detr_model: "Generalized" 
 edmfx_nh_pressure: true
 edmfx_sgs_mass_flux: true
 edmfx_sgs_diffusive_flux: true
@@ -27,4 +27,4 @@ z_stretch: false
 dt: 10secs
 t_end: 8hours
 dt_save_to_disk: 10mins
-toml: [toml/diagnostic_edmfx_box.toml]
+toml: [toml/diagnostic_edmfx_trmm_box.toml]
