--- a/config/model_configs/prognostic_edmfx_dycoms_rf01_box.yml
+++ b/config/model_configs/prognostic_edmfx_dycoms_rf01_box.yml
@@ -6,8 +6,8 @@ rad: DYCOMS_RF01
 surface_setup: DYCOMS_RF01
 turbconv: prognostic_edmfx
 edmfx_upwinding: first_order
-edmfx_entr_model: "ConstantCoefficient"
-edmfx_detr_model: "BOverW"
+edmfx_entr_model: "Generalized"
+edmfx_detr_model: "Generalized"
 edmfx_sgs_mass_flux: true
 edmfx_sgs_diffusive_flux: true
 edmfx_nh_pressure: true
