--- a/config/model_configs/prognostic_edmfx_gabls_box.yml
+++ b/config/model_configs/prognostic_edmfx_gabls_box.yml
@@ -4,8 +4,8 @@ edmf_coriolis: GABLS
 surface_setup: GABLS
 turbconv: "prognostic_edmfx"
 edmfx_upwinding: "first_order"
-edmfx_entr_model: "ConstantCoefficient"
-edmfx_detr_model: "BOverW"
+edmfx_entr_model: "Generalized"
+edmfx_detr_model: "Generalized"
 edmfx_sgs_mass_flux: true
 edmfx_sgs_diffusive_flux: true
 edmfx_nh_pressure: true
