--- a/config/model_configs/prognostic_edmfx_rico_box.yml
+++ b/config/model_configs/prognostic_edmfx_rico_box.yml
@@ -5,8 +5,8 @@ ls_adv: "Rico"
 surface_setup: "Rico"
 turbconv: "prognostic_edmfx"
 edmfx_upwinding: first_order
-edmfx_entr_model: "ConstantCoefficient"
-edmfx_detr_model: "BOverW"
+edmfx_entr_model: "Generalized"
+edmfx_detr_model: "Generalized"
 edmfx_sgs_mass_flux: true
 edmfx_sgs_diffusive_flux: true
 edmfx_nh_pressure: true
