--- a/config/model_configs/prognostic_edmfx_bomex_box.yml
+++ b/config/model_configs/prognostic_edmfx_bomex_box.yml
@@ -27,6 +27,7 @@ perturb_initstate: false
 dt: "5secs"
 t_end: "6hours"
 dt_save_to_disk: "10mins"
+FLOAT_TYPE: "Float64"
 toml: [toml/prognostic_edmfx_box.toml]
 diagnostics:
   - short_name: ts
