--- a/config/model_configs/prognostic_edmfx_bomex_tke_box.yml
+++ b/config/model_configs/prognostic_edmfx_bomex_tke_box.yml
@@ -14,7 +14,7 @@ edmfx_nh_pressure: true
 prognostic_tke: true
 moist: "equil"
 config: "box"
-hyperdiff: "true"
+hyperdiff: "false"
 kappa_4: 1.0e12
 x_max: 1e5
 y_max: 1e5
@@ -27,4 +27,5 @@ perturb_initstate: false
 dt: "5secs"
 t_end: "6hours"
 dt_save_to_disk: "10mins"
+FLOAT_TYPE: "Float64"
 toml: [toml/prognostic_edmfx_box.toml]
