Update to the new CloudMicrophysics interface

--- a/perf/Project.toml
+++ b/perf/Project.toml
@@ -75,6 +75,7 @@ ClimaCorePlots = "0.2"
 ClimaCoreSpectra = "0.1"
 ClimaCoreTempestRemap = "0.3"
 ClimaCoreVTK = "0.7"
+CloudMicrophysics = "0.15"
 DiffEqNoiseProcess = "5"
 ForwardDiff = "0.10"
 Glob = "1"
