--- a/test/Project.toml
+++ b/test/Project.toml
@@ -72,6 +72,7 @@ ClimaCorePlots = "0.2"
 ClimaCoreSpectra = "0.1"
 ClimaCoreTempestRemap = "0.3"
 ClimaCoreVTK = "0.7"
+CloudMicrophysics = "0.15"
 Dierckx = "0.5"
 DiffEqNoiseProcess = "5"
 ForwardDiff = "0.10"
