--- a/Project.toml
+++ b/Project.toml
@@ -74,6 +74,7 @@ RRTMGP = "0.9.2"
 RootSolvers = "0.2, 0.3, 0.4"
 SciMLBase = "1, 2"
 StaticArrays = "1"
+Statistics = "1"
 StatsBase = "0.33, 0.34"
 SurfaceFluxes = "0.8.0"
 Thermodynamics = "0.11"
