--- a/config/model_configs/prognostic_edmfx_bomex_tke_column.yml
+++ b/config/model_configs/prognostic_edmfx_bomex_tke_column.yml
@@ -1,9 +1,11 @@
-job_id: "prognostic_edmfx_gabls_tke_box"
-initial_condition: GABLS
-edmf_coriolis: GABLS
-surface_setup: GABLS
+job_id: "prognostic_edmfx_bomex_tke_column"
+initial_condition: "Bomex"
+subsidence: "Bomex"
+edmf_coriolis: "Bomex"
+ls_adv: "Bomex"
+surface_setup: "Bomex"
 turbconv: "prognostic_edmfx"
-edmfx_upwinding: "first_order"
+edmfx_upwinding: first_order
 edmfx_entr_model: "Generalized"
 edmfx_detr_model: "Generalized"
 edmfx_sgs_mass_flux: true
@@ -11,18 +13,13 @@ edmfx_sgs_diffusive_flux: true
 edmfx_nh_pressure: true
 prognostic_tke: true
 moist: "equil"
-config: "box"
-hyperdiff: "true"
-kappa_4: 1e12
-x_max: 1e5
-y_max: 1e5
-z_max: 400
-x_elem: 2
-y_elem: 2
-z_elem: 8
+config: "column"
+hyperdiff: "false"
+z_max: 3e3
+z_elem: 60
 z_stretch: false
-dt: "5secs"
-t_end: "9hours"
-dt_save_to_disk: "10mins"
 perturb_initstate: false
+dt: "5secs"
+t_end: "6hours"
+dt_save_to_disk: "10mins"
 toml: [toml/prognostic_edmfx_box.toml]
