--- a/.buildkite/gpu_pipeline/pipeline.yml
+++ b/.buildkite/gpu_pipeline/pipeline.yml
@@ -10,6 +10,7 @@ env:
   CLIMAATMOS_GC_NSTEPS: 10
   GPU_CONFIG_PATH: "config/gpu_configs/"
   SLURM_GPU_BIND: none # https://github.com/open-mpi/ompi/issues/11949#issuecomment-1737712291
+  SLURM_KILL_BAD_EXIT: 1 # kill job if any process exits with non-zero exit code
 
 steps:
   - label: "init :GPU:"
@@ -78,7 +79,7 @@ steps:
           slurm_gpus: 1
           slurm_cpus_per_task: 4
 
-      - label: "moist Held-Suarez - 8 gpus"
+      - label: "moist Held-Suarez - 4 gpus"
         key: "target_gpu_hs_rhoe_equilmoist_nz63_0M_55km_rs35km_4process"
         command:
           - mkdir -p target_gpu_hs_rhoe_equilmoist_nz63_0M_55km_rs35km_4process
