--- a/Project.toml
+++ b/Project.toml
@@ -51,7 +51,7 @@ CLIMAParameters = "0.7.24"
 ClimaComms = "0.5.5"
 ClimaCore = "0.10.55"
 ClimaTimeSteppers = "0.7.14"
-CloudMicrophysics = "0.14.0"
+CloudMicrophysics = "0.14.0, 0.15"
 Colors = "0.12"
 Dierckx = "0.5"
 DiffEqBase = "6"
