--- a/Project.toml
+++ b/Project.toml
@@ -63,7 +63,7 @@ Insolation = "0.6"
 Interpolations = "0.14"
 IntervalSets = "0.5, 0.6, 0.7"
 Krylov = "0.9"
-NCDatasets = "0.11, 0.12, 0.13"
+NCDatasets = "0.11, 0.12, <0.13"
 NVTX = "0.3"
 Pkg = "1.8"
 RRTMGP = "0.9.2"
