--- a/Project.toml
+++ b/Project.toml
@@ -46,6 +46,7 @@ YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 [compat]
 ArgParse = "1"
 ArtifactWrappers = "0.2"
+Artifacts = "1"
 AtmosphericProfilesLibrary = "0.1"
 CLIMAParameters = "0.7.24"
 ClimaComms = "0.5.5"
@@ -53,6 +54,7 @@ ClimaCore = "0.10.55"
 ClimaTimeSteppers = "0.7.14"
 CloudMicrophysics = "0.15.0"
 Colors = "0.12"
+Dates = "1"
 Dierckx = "0.5"
 DiffEqBase = "6"
 DiffEqCallbacks = "2"
@@ -63,15 +65,21 @@ Insolation = "0.6"
 Interpolations = "0.14"
 IntervalSets = "0.5, 0.6, 0.7"
 Krylov = "0.9"
+LinearAlgebra = "1"
+Logging = "1"
 NCDatasets = "0.11, 0.12, <0.13"
 NVTX = "0.3"
 Pkg = "1.8"
+Printf = "1"
 RRTMGP = "0.9.2"
+Random = "1"
 RootSolvers = "0.2, 0.3, 0.4"
 SciMLBase = "1, 2"
 StaticArrays = "1"
+Statistics = "1"
 StatsBase = "0.33, 0.34"
 SurfaceFluxes = "0.8.0"
+Test = "1"
 Thermodynamics = "0.11"
 YAML = "0.4"
 julia = "1.7"
