--- a/config/default_configs/default_edmf_config.yml
+++ b/config/default_configs/default_edmf_config.yml
@@ -18,7 +18,10 @@ edmfx_detr_model:
   help: "EDMFX detrainment closure.  [`nothing` (default), `PiGroups`, `Generalized`, `GeneralizedHarmonics`]"
   value: ~
 edmfx_upwinding:
-  help: "EDMFX upwinding mode [`none` (default), `first_order` , `third_order`, `boris_book`, `zalesak`]"
+  help: "EDMFX upwinding mode [`none` (default), `first_order`, `third_order`]"
+  value: none
+edmfx_sgsflux_upwinding:
+  help: "EDMFX SGS mass flux upwinding mode [`none` (default), `first_order`, `third_order`]"
   value: none
 edmfx_sgs_mass_flux:
   help: "If set to true, it switches on EDMFX SGS mass flux.  [`true`, `false` (default)]"
