--- a/.github/workflows/julia_formatter.yml
+++ b/.github/workflows/julia_formatter.yml
@@ -2,12 +2,9 @@ name: JuliaFormatter
 
 on:
   push:
-    branches:
-      - main
-      - trying
-      - staging
     tags: '*'
   pull_request:
+  merge_group:
 
 jobs:
   format:
