--- a/config/model_configs/prognostic_edmfx_trmm_column.yml
+++ b/config/model_configs/prognostic_edmfx_trmm_column.yml
@@ -1,23 +1,19 @@
-job_id: prognostic_edmfx_trmm_box
+job_id: prognostic_edmfx_trmm_column
 initial_condition: TRMM_LBA
 rad: TRMM_LBA
 surface_setup: TRMM_LBA
 turbconv: prognostic_edmfx
 edmfx_upwinding: first_order
 edmfx_entr_model: "Generalized"
-edmfx_detr_model: "Generalized"
+edmfx_detr_model: "ConstantArea"
 edmfx_sgs_mass_flux: true
 edmfx_sgs_diffusive_flux: true
 edmfx_nh_pressure: true
-prognostic_tke: false
+prognostic_tke: true
 moist: equil
 apply_limiter: false
 precip_model: "0M"
-config: box
-hyperdiff: "true"
-kappa_4: 1e12
-x_max: 1e5
-y_max: 1e5
+config: column
 z_max: 16400
 x_elem: 2
 y_elem: 2
