--- a/config/model_configs/prognostic_edmfx_dycoms_rf01_box.yml
+++ b/config/model_configs/prognostic_edmfx_dycoms_rf01_box.yml
@@ -6,24 +6,25 @@ rad: DYCOMS_RF01
 surface_setup: DYCOMS_RF01
 turbconv: prognostic_edmfx
 edmfx_upwinding: first_order
+edmfx_sgsflux_upwinding: first_order
 edmfx_entr_model: "Generalized"
 edmfx_detr_model: "Generalized"
 edmfx_sgs_mass_flux: true
 edmfx_sgs_diffusive_flux: true
 edmfx_nh_pressure: true
-prognostic_tke: false
+prognostic_tke: true
 moist: equil
 config: box
 hyperdiff: "true"
-kappa_4: 1e12
-x_max: 1e5
-y_max: 1e5
+kappa_4: 1.0e21
+x_max: 1e8
+y_max: 1e8
 z_max: 1500
 x_elem: 2
 y_elem: 2
 z_elem: 30
 z_stretch: false
-dt: 5secs
+dt: 10secs
 t_end: 4hours
 dt_save_to_disk: 10mins
-toml: [toml/prognostic_edmfx_box.toml]
+toml: [toml/prognostic_edmfx_dycoms_rf01_box.toml]
