--- a/config/model_configs/prognostic_edmfx_gabls_box.yml
+++ b/config/model_configs/prognostic_edmfx_gabls_box.yml
@@ -5,11 +5,11 @@ surface_setup: GABLS
 turbconv: "prognostic_edmfx"
 edmfx_upwinding: "first_order"
 edmfx_entr_model: "Generalized"
-edmfx_detr_model: "Generalized"
+edmfx_detr_model: "ConstantArea"
 edmfx_sgs_mass_flux: true
 edmfx_sgs_diffusive_flux: true
 edmfx_nh_pressure: true
-prognostic_tke: false
+prognostic_tke: true
 moist: "equil"
 config: "box"
 hyperdiff: "true"
