--- a/config/model_configs/prognostic_edmfx_rico_column.yml
+++ b/config/model_configs/prognostic_edmfx_rico_column.yml
@@ -1,9 +1,8 @@
-job_id: "prognostic_edmfx_bomex_tke_column"
-initial_condition: "Bomex"
-subsidence: "Bomex"
-edmf_coriolis: "Bomex"
-ls_adv: "Bomex"
-surface_setup: "Bomex"
+job_id: "prognostic_edmfx_rico_column"
+initial_condition: "Rico"
+subsidence: "Rico"
+ls_adv: "Rico"
+surface_setup: "Rico"
 turbconv: "prognostic_edmfx"
 edmfx_upwinding: first_order
 edmfx_entr_model: "Generalized"
@@ -13,13 +12,15 @@ edmfx_sgs_diffusive_flux: true
 edmfx_nh_pressure: true
 prognostic_tke: true
 moist: "equil"
+precip_model: "0M"
 config: "column"
-hyperdiff: "false"
-z_max: 3e3
-z_elem: 60
+z_max: 4e3
+x_elem: 2
+y_elem: 2
+z_elem: 100
 z_stretch: false
 perturb_initstate: false
 dt: "5secs"
 t_end: "6hours"
 dt_save_to_disk: "10mins"
-toml: [toml/prognostic_edmfx_bomex_box.toml]
+toml: [toml/prognostic_edmfx_box.toml]
