Update instantaneous zenith angle computation

--- a/Project.toml
+++ b/Project.toml
@@ -29,6 +29,7 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 NCDatasets = "85f8d34a-cbdd-5861-8df4-14fed0d494ab"
 NVTX = "5da4648a-3479-48b8-97b9-01cb529c0a1f"
+OpenMPI_jll = "fe0851c0-eecd-5654-98d4-656369965a5c"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 RRTMGP = "a01a1ee8-cea4-48fc-987c-fc7878d79da1"
@@ -61,7 +62,7 @@ DiffEqCallbacks = "2"
 DocStringExtensions = "0.8, 0.9"
 FastGaussQuadrature = "0.4, 0.5, 1"
 ImageFiltering = "0.7"
-Insolation = "0.6"
+Insolation = "0.7"
 Interpolations = "0.14"
 IntervalSets = "0.5, 0.6, 0.7"
 Krylov = "0.9"
