Update GPU pipeline to use cuda_env

--- a/perf/Project.toml
+++ b/perf/Project.toml
@@ -79,6 +79,7 @@ CloudMicrophysics = "0.15"
 DiffEqNoiseProcess = "5"
 ForwardDiff = "0.10"
 Glob = "1"
+Insolation = "0.7"
 JET = "0.7, 0.8"
 JSON = "0.21"
 OrderedCollections = "1"
