Update to new ClimaCoreTempestRemap
Keeps OpenMPI < 5

--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -24,6 +24,7 @@ DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 FastGaussQuadrature = "442a2c76-b920-505d-bb47-c5924d526838"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 Glob = "c27321d9-0574-5035-807b-f59d2c89b15c"
+HDF5_jll = "0234f1f7-429e-5d53-9886-15a909be8d59"
 ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
 Insolation = "e98cc03f-d57e-4e3c-b70c-8d51efe9e0d8"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
@@ -34,6 +35,7 @@ JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 Krylov = "ba0b0d4f-ebba-5204-a429-3ac8c609bfb7"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
+MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
 NCDatasets = "85f8d34a-cbdd-5861-8df4-14fed0d494ab"
 NCRegressionTests = "1789bc09-29e6-4c93-9c75-fe2179693664"
 NVTX = "5da4648a-3479-48b8-97b9-01cb529c0a1f"
