--- a/Project.toml
+++ b/Project.toml
@@ -70,6 +70,7 @@ LinearAlgebra = "1"
 Logging = "1"
 NCDatasets = "0.11, 0.12, <0.13"
 NVTX = "0.3"
+OpenMPI_jll = "4.0"
 Pkg = "1.8"
 Printf = "1"
 RRTMGP = "0.9.2"
