--- a/perf/Project.toml
+++ b/perf/Project.toml
@@ -39,6 +39,7 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 NCDatasets = "85f8d34a-cbdd-5861-8df4-14fed0d494ab"
 NVTX = "5da4648a-3479-48b8-97b9-01cb529c0a1f"
+OpenMPI_jll = "fe0851c0-eecd-5654-98d4-656369965a5c"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 PProf = "e4faabce-9ead-11e9-39d9-4379958e3056"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
@@ -81,6 +82,7 @@ ForwardDiff = "0.10"
 Glob = "1"
 JET = "0.7, 0.8"
 JSON = "0.21"
+OpenMPI_jll = "4.0"
 OrderedCollections = "1"
 PProf = "2"
 Plots = "1"
