--- a/.buildkite/gpu_pipeline/pipeline.yml
+++ b/.buildkite/gpu_pipeline/pipeline.yml
@@ -21,12 +21,11 @@ steps:
 
       - echo "--- Configure CUDA"
       # force the initialization of the CUDA runtime as it is lazily loaded by default
-      - julia --project=examples -e 'using CUDA; CUDA.precompile_runtime()'
-      - julia --project=examples -e 'using CUDA; CUDA.versioninfo()'
-      
+      - julia --project=cuda_env -e 'using Pkg; Pkg.resolve(); Pkg.instantiate(;verbose=true); using CUDA; CUDA.precompile_runtime()'
+
       - echo "--- Download artifacts"
       - julia --project=examples artifacts/download_artifacts.jl
-      
+
     agents:
       slurm_gpus: 1
     env:
